<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--home item-->
    <item
        android:id="@+id/action_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/menu_home_title"
        app:showAsAction="ifRoom" />

    <!--favorites item-->
    <item
        android:id="@+id/action_favorites"
        android:icon="@drawable/ic_star_black_24dp"
        android:title="@string/menu_favorites_title"
        app:showAsAction="ifRoom" />

    <!--find item-->
    <item
        android:id="@+id/action_find"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/menu_find_place_title"
        app:showAsAction="ifRoom" />

    <!--settings item-->
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/menu_settings_title"
        app:showAsAction="ifRoom" />
</menu>